fixing font colour in settings so now it will be visible

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -81,7 +81,7 @@
   margin-bottom: 20px;
 }
 
-.settings a, .settings a:hover {
+.homesettings a, .homesettings a:hover {
   color: #ffffff;
   background: none;
 }
